hphp/test/zend/good/ext/zlib/tests/zlib_scheme_file_put_contents_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("zlib")) {
    print "skip - ZLIB extension not loaded";
}
}
