hphp/test/zend/bad/ext/zlib/tests/gzgetc_basic_1.php.skipif
<?php 
if (!extension_loaded("zlib")) {
	print "skip - ZLIB extension not loaded"; 
}
include 'func.inc';
if (version_compare(get_zlib_version(), '1.2.7') < 0) {
	die('skip - only for zlib >= 1.2.7');
}
?>